# Agentic_AI_Projects

./: .gitignore  docker-compose.yml  stock_crypto_morning_brief_prompt.txt
Project1/: .gitignore  README.md  prompt_for_project.txt  pyproject.toml  requirements.txt
Project1/backend/app/: main.py
Project1/backend/app/api/routes/: auth.py  chat.py  health.py  voice.py
Project1/backend/app/core/: config.py  security.py
Project1/backend/app/services/: bank_directory.py
Project1/backend/app/services/ai/: agent.py
Project1/backend/app/services/voice/: translation_service.py  whisper_service.py
Project1/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
Project1/frontend/src/: App.jsx  index.css  main.jsx
Project1/frontend/src/api/: bankingApi.js
Project1/frontend/src/components/: BankSelector.jsx  CalculatorResult.jsx  ChatWindow.jsx  EscalationAlert.jsx  LanguageSelector.jsx  MessageBubble.jsx  Sidebar.jsx  VoiceRecorder.jsx
Project1/frontend/src/hooks/: useChat.js  useVoice.js
Project3/: README.md  requirements.txt
Project3/agents/fetcher/: app.py  requirements.txt
Project3/agents/scheduler/: app.py
Project3/agents/scorer/: app.py
Project3/backend/: Dockerfile
Project3/data/: watchlist.json
Project3/frontend/: .env.example  package-lock.json  tailwind.config.js
agents/formatter/: app.py
agents/scheduler/: Dockerfile
agents/sentiment/: Dockerfile  app.py
backend/: README.md
backend/app/: main.py
frontend/: README.md  index.html  package.json  vite.config.js
frontend/src/: App.css  index.css
(+41 files in other folders)
