[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "email-validator>=2.3.0",
    "fastapi>=0.135.3",
    "groq>=0.37.1",
    "httpx>=0.28.1",
    "indic-transliteration>=2.3.82",
    "indictranstoolkit>=1.1.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.6",
    "loguru>=0.7.3",
    "numpy>=2.4.4",
    "openai-whisper>=20250625",
    "passlib[bcrypt]>=1.7.4",
    "phonenumbers>=9.0.27",
    "prometheus-client>=0.25.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "transformers<5.0.0",
    "uvicorn[standard]>=0.44.0",
]
